fixed spacing error

--- a/src/styles.css
+++ b/src/styles.css
@@ -120,7 +120,6 @@ footer {
   grid-template-columns: 1fr 1fr;
   padding: 5px;
   width: 100%;
-  margin-top: 20px; 
   position: relative;
 }
 
@@ -312,7 +311,6 @@ body .titlebar b {
   height: 100%;
   border-radius: 0;
   padding: 3rem 2rem;
-  margin: 1rem 0 0 0;
   color:#120650;
 }
 
